storage/innobase/include/buf0lru.h
@@ -33,6 +33,7 @@ Created 11/5/1995 Heikki Tuuri
 // Forward declaration
 struct trx_t;
 struct fil_space_t;
+class page_id_t;
 
 /******************************************************************//**
 Returns TRUE if less than 25 % of the buffer pool is available. This can be
@@ -202,14 +203,15 @@ void
 buf_LRU_stat_update(void);
 /*=====================*/
 
-/******************************************************************//**
-Remove one page from LRU list and put it to free list */
+/** Remove one page from LRU list and put it to free list
+@param[in,out]	bpage		block, must contain a file page and be in a
+				state where it can be freed; there may or may
+				not be a hash index to the page
+@param[in]	old_page_id	old page number before setting corruption id. */
 void
 buf_LRU_free_one_page(
-/*==================*/
-	buf_page_t*	bpage)	/*!< in/out: block, must contain a file page and
-				be in a state where it can be freed; there
-				may or may not be a hash index to the page */
+	buf_page_t*	bpage,
+	page_id_t	old_page_id)
 	MY_ATTRIBUTE((nonnull));
 
 /******************************************************************//**
